--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: pbcmc   
 Type: Package   
 Title: Permutation-Based Confidence for Molecular Classification   
-Version: 1.9.0
+Version: 1.9.1
 Date: 2016-09-23   
 Author: Cristobal Fresno, German A. Gonzalez, Andrea S. Llera and Elmer  
         A. Fernandez   
@@ -39,3 +39,4 @@ Collate: 'pbcmcPackage.R' 'MolecularPermutationClassifierClass.R'
         'pbcmcData.R'
 RoxygenNote: 5.0.1   
 NeedsCompilation: no   
+PackageStatus: Deprecated
